--- a/DontCommitSecrets/DontCommitSecrets.csproj
+++ b/DontCommitSecrets/DontCommitSecrets.csproj
@@ -1,10 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Authors>Wesley Ameling</Authors>
+	<Company />
+	<Description>Dont commit your Secrets to git! This is a client to interface with the DontCommitSecrets server.</Description>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<RepositoryType>git</RepositoryType>
+	<PackageTags>configuration, secrets</PackageTags>
+	<RepositoryUrl>https://github.com/EngineerCoding/DontCommitSecrets</RepositoryUrl>
+	<PackageProjectUrl>https://github.com/EngineerCoding/DontCommitSecrets</PackageProjectUrl>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
+	<PackageLicenseFile>LICENSE</PackageLicenseFile>
+	<Version>0.0.1-untested</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="$(MSBuildThisFileDirectory)../LICENSE" Pack="true" PackagePath="" />
+	<None Include="$(MSBuildThisFileDirectory)../README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
