Fix section path

--- a/DontCommitSecrets/DontCommitSecrets.csproj
+++ b/DontCommitSecrets/DontCommitSecrets.csproj
@@ -14,7 +14,7 @@
 	<PackageProjectUrl>https://github.com/EngineerCoding/DontCommitSecrets</PackageProjectUrl>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseFile>LICENSE</PackageLicenseFile>
-	<Version>0.0.1-untested</Version>
+	<Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
